--- a/project/yazhou-pc/index.html
+++ b/project/yazhou-pc/index.html
@@ -504,6 +504,8 @@
       </div>
     </div>
   </body>
+
+
 <script>
   // 自动化测试页面加载时间时使用
   window.init_loading_time_obj = 
@@ -548,4 +550,6 @@
   // 设置 loading 动画 主题
   set_root_loading_theme(url_search)
 </script>
+
+<script type="module" src="./main.js"></script>
 </html>
