取消 script引入 不然报错

--- a/project/yazhou-pc/index.html
+++ b/project/yazhou-pc/index.html
@@ -21,7 +21,7 @@
       name="viewport"
       content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) {%, viewport-fit=cover<% }%"
     />
-
+<!-- 
     <link
       rel="icon"
       id="link_icon"
@@ -29,7 +29,7 @@
       href="%VITE_APP_BUILD_VERSION%/image/common/favicon.ico"
     />
     <link rel="stylesheet" href="%VITE_APP_BUILD_VERSION%/lib/font/font-roboto.min.css">
-    <script src="%VITE_APP_BUILD_VERSION%/lib/js/crypto-js.min.js"></script>
+    <script src="%VITE_APP_BUILD_VERSION%/lib/js/crypto-js.min.js"></script> -->
     <style>
       /* 取消默认选中样式 */
       body {
@@ -421,7 +421,7 @@
         }
       }
     </style>
-    <script async type="text/javascript" src="%VITE_APP_hidApi%"></script>
+    <!-- <script async type="text/javascript" src="%VITE_APP_hidApi%"></script> -->
 
     <script  >
 
