--- a/project/yazhou-h5/index.html
+++ b/project/yazhou-h5/index.html
@@ -408,7 +408,7 @@
 </head>
 <body class="custom-format-<%=com%">
   <!--loading 动画-->
-  <div class="loading" id="loading-root-ele">
+  <!-- <div class="loading" id="loading-root-ele">
     <div id="loading-root-main" class="la-line-scale">
       <div></div>
       <div></div>
@@ -416,7 +416,7 @@
       <div></div>
       <div></div>
     </div>
-  </div>
+  </div> -->
   <!-- DO NOT touch the following DIV -->
   <div id="ty-app">
   </div>
