--- a/project/yazhou-pc/index.html
+++ b/project/yazhou-pc/index.html
@@ -494,7 +494,7 @@
     <!-- DO NOT touch the following DIV -->
     <div id="ty-app"></div>
     <!--loading 动画-->
-    <div id="loading-root-ele" class="loading">
+    <!-- <div id="loading-root-ele" class="loading"  >
       <div id="loading-root-main" class="la-line-scale loading-line">
         <div></div>
         <div></div>
@@ -502,7 +502,7 @@
         <div></div>
         <div></div>
       </div>
-    </div>
+    </div> -->
   </body>
 
 
