--- a/project/yazhou-pc/index.html
+++ b/project/yazhou-pc/index.html
@@ -542,7 +542,7 @@
     //类名拼接
     current_theme = current_theme+ '-root-loading'
     //根据 主题 设置节点 类名
-    document.querySelector('#loading-root-ele').className ="loading "+current_theme
+    // document.querySelector('#loading-root-ele').className ="loading "+current_theme
   }
   //对接app跳转需求，当Url地址有传入 token 字段时，认定是初次进入，手动清除掉缓存
   let url_search = new URLSearchParams(location.search);
