--- a/project/yazhou-pc/index.html
+++ b/project/yazhou-pc/index.html
@@ -35,12 +35,13 @@
     <script src="%VITE_APP_BUILD_VERSION%/lib/js/crypto-js.min.js"></script>
     <style>
       /* 取消默认选中样式 */
-      body {
+      body,html {
         -moz-user-select: none;
         -webkit-user-select: none;
         -ms-user-select: none;
         -khtml-user-select: none;
         user-select: none;
+        height: 100%;
       }
       .loading {
         position: fixed;
@@ -495,7 +496,7 @@
   </head>
   <body class="custom-format-<%=com%">
     <!-- DO NOT touch the following DIV -->
-    <div id="ty-app"></div>
+    <div id="ty-app" class="full-height"></div>
     <!--loading 动画-->
     <!-- <div id="loading-root-ele" class="loading"  >
       <div id="loading-root-main" class="la-line-scale loading-line">
