--- a/project/yazhou-pc/index.html
+++ b/project/yazhou-pc/index.html
@@ -434,7 +434,8 @@
     <script>
       window.CURRENT_ENV_BUILD_IN_OSS = "%VITE_APP_current_env_build_in_oss%";
     </script>
-    <script src="/public/lib/js/crypto-js.min.js"></script>
+        <script src="%VITE_APP_BUILD_VERSION%/lib/js/crypto-js.min.js"></script>
+   
     <script>
       //版本兼容判定
       (function () {
