H5 赛事列表联调

--- a/project/yazhou-h5/index.html
+++ b/project/yazhou-h5/index.html
@@ -4,7 +4,7 @@
  * @Description: 项目入口html页面
 -->
 <!DOCTYPE html>
-<html style="font-size: 100px">
+<html style="font-size: 100px; height: 100%">
   <head>
     <meta charset="utf-8" />
     <!-- 禁止谷歌翻译 自动翻译 -->
