--- a/project/yazhou-pc/index.html
+++ b/project/yazhou-pc/index.html
@@ -28,10 +28,10 @@
       type="image/png"
       href="%VITE_APP_BUILD_VERSION%/image/common/favicon.ico"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="%VITE_APP_BUILD_VERSION%/lib/font/font-roboto.min.css"
-    />
+    /> -->
     <script src="%VITE_APP_BUILD_VERSION%/lib/js/crypto-js.min.js"></script>
     <style>
       /* 取消默认选中样式 */
