--- a/project/yazhou-pc/index.html
+++ b/project/yazhou-pc/index.html
@@ -35,14 +35,14 @@
     <script src="%VITE_APP_BUILD_VERSION_HTML%/lib/js/crypto-js.min.js"></script>
     <style>
       /* 取消默认选中样式 */
-      body,html {
+      /* body,html {
         -moz-user-select: none;
         -webkit-user-select: none;
         -ms-user-select: none;
         -khtml-user-select: none;
         user-select: none;
         height: 100%;
-      }
+      } */
       .loading {
         position: fixed;
         left: 0;
