--- a/project/yazhou-h5/index.html
+++ b/project/yazhou-h5/index.html
@@ -49,13 +49,13 @@
       }
 
       /* 取消默认选中样式 */
-      body {
+      /* body {
         -moz-user-select: none;
         -webkit-user-select: none;
         -ms-user-select: none;
         -khtml-user-select: none;
         user-select: none;
-      }
+      } */
       .loading {
         position: fixed;
         left: 0;
