--- a/project/yazhou-h5/index.html
+++ b/project/yazhou-h5/index.html
@@ -429,7 +429,7 @@
         }
       }
     </style>
-    <script src="%VITE_APP_BUILD_VERSION_HTML%/lib/js/crypto-js.min.js"></script>
+    <script src="%VITE_APP_BUILD_VERSION%/lib/js/crypto-js.min.js"></script>
  
 
     <script>
