--- a/project/app-h5/index.html
+++ b/project/app-h5/index.html
@@ -15,7 +15,8 @@
     <meta name="version-date" content="%VITE_APP_versionDate%" />
     <meta name="version-branch" content="%VITE_APP_BRANCH%" />
     <meta name="version-tag" content="%VITE_APP_TAG%" />
-
+    <meta name="version-PROJECT_NAME" content="%VITE_APP_PROJECT_NAME%" />
+    <meta name="version-BUILD_VERSION" content="%VITE_APP_BUILD_VERSION%" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta
