--- a/project/new-pc/index.html
+++ b/project/new-pc/index.html
@@ -11,6 +11,7 @@
     <meta name="version-branch" content="%VITE_APP_BRANCH%" />
     <meta name="version-tag" content="%VITE_APP_TAG%" />
     <meta name="version-build_tag" content="%VITE_APP_BUILD_TAG%" />
+    <meta name="version-PROJECT_NAME" content="%VITE_APP_PROJECT_NAME%" />
     <meta name="version-BUILD_VERSION" content="%VITE_APP_BUILD_VERSION%" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
