%VITE_APP_BUILD_VERSION%

--- a/project/app-h5/index.html
+++ b/project/app-h5/index.html
@@ -6,7 +6,9 @@
 <!DOCTYPE html>
 <html style="font-size: 100px; height: 100%">
   <head>
+
     <meta charset="utf-8" />
+    <base href="/%VITE_APP_BUILD_VERSION%/">
     <!-- 禁止谷歌翻译 自动翻译 -->
     <meta name="google" content="notranslate" />
     <meta name="description" content="%VITE_APP_productDescription%" />
