--- a/project/app-h5/index.html
+++ b/project/app-h5/index.html
@@ -432,7 +432,7 @@
         }
       }
     </style>
-    <script src="%VITE_APP_BUILD_VERSION%/lib/js/crypto-js.min.js"></script>
+    <script src="/%VITE_APP_BUILD_VERSION%/lib/js/crypto-js.min.js"></script>
  
 
     <script>
