--- a/project/yazhou-h5/index.html
+++ b/project/yazhou-h5/index.html
@@ -16,7 +16,7 @@
     <meta name="version-branch" content="%VITE_APP_BRANCH%" />
     <meta name="version-tag" content="%VITE_APP_TAG%" />
     <meta name="version-PROJECT_NAME" content="%VITE_APP_PROJECT_NAME%" />
-    <meta name="version-BUILD_VERSION" content="%VITE_APP_BUILD_VERSION%" />
+    <meta name="version-BUILD_VERSION" content="/%VITE_APP_BUILD_VERSION%" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta
@@ -430,7 +430,7 @@
         }
       }
     </style>
-    <script src="%VITE_APP_BUILD_VERSION%/lib/js/crypto-js.min.js"></script>
+    <script src="/%VITE_APP_BUILD_VERSION%/lib/js/crypto-js.min.js"></script>
  
 
     <script>
