--- a/project/app-h5/index.html
+++ b/project/app-h5/index.html
@@ -8,7 +8,6 @@
   <head>
 
     <meta charset="utf-8" />
-    <base href="/%VITE_APP_BUILD_VERSION%/">
     <!-- 禁止谷歌翻译 自动翻译 -->
     <meta name="google" content="notranslate" />
     <meta name="description" content="%VITE_APP_productDescription%" />
@@ -18,7 +17,7 @@
     <meta name="version-branch" content="%VITE_APP_BRANCH%" />
     <meta name="version-tag" content="%VITE_APP_TAG%" />
     <meta name="version-PROJECT_NAME" content="%VITE_APP_PROJECT_NAME%" />
-    <meta name="version-BUILD_VERSION" content="/%VITE_APP_BUILD_VERSION%" />
+    <meta name="version-BUILD_VERSION" content="%VITE_APP_BUILD_VERSION%" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta
@@ -432,7 +431,7 @@
         }
       }
     </style>
-    <script src="/%VITE_APP_BUILD_VERSION%/lib/js/crypto-js.min.js"></script>
+    <script src="%VITE_APP_BUILD_VERSION%/lib/js/crypto-js.min.js"></script>
  
 
     <script>
