--- a/project/app-h5/index.html
+++ b/project/app-h5/index.html
@@ -494,7 +494,7 @@
 
       //对接app跳转需求，当Url地址有传入 token 字段时，认定是初次进入，手动清除掉缓存
       try {
-        let url_search = new URLSearchParams(location.search);
+        let url_search = new URLSearchParams(location.search || location.hash);
         // 获取清除缓存参数
         let clearcache = url_search.get("clearcache");
         if (clearcache == "1") {
