VITE_APP_MODULE_SDK_VERSION

--- a/project/app-h5/index.html
+++ b/project/app-h5/index.html
@@ -18,6 +18,7 @@
     <meta name="version-tag" content="%VITE_APP_TAG%" />
     <meta name="version-PROJECT_NAME" content="%VITE_APP_PROJECT_NAME%" />
     <meta name="version-BUILD_VERSION" content="%VITE_APP_BUILD_VERSION%" />
+    <meta name="version-MODULE_SDK_VERSION" content="%VITE_APP_MODULE_SDK_VERSION%" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta
