处理高度未继承html, body及搜索优化

--- a/project/ouzhou-h5/index.html
+++ b/project/ouzhou-h5/index.html
@@ -204,6 +204,9 @@
         margin-top: 0;
         margin-bottom: 0;
       }
+      #ty-app {
+        height: inherit;
+      }
       /*
       * Animation
       */
